# SatelliteTaskCMake

./: CMakeLists.txt  README.md
SatelliteTask/: CMakeLists.txt  ISatellite.cpp  Satellite.cpp  Satellite.h  SatelliteTaskCMake.h  Source.cpp  Task.cpp  TerrainStation.cpp
SatelliteTask/include/: ISatellite.h  ITerrainStation.h  Task.h  TaskInfoTerrain.h  TaskResult.h  TerrainStation.h
SatelliteTask/resources/: inputData1.txt  test1.txt  test2.txt  test3.txt  test4.txt
SatelliteTask/src/: Satellite.cpp  Source.cpp  Task.cpp  TerrainStation.cpp
